<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Add_hint">Add a new item</string>
    <string name="Add_label">Add</string>
    <string name="Add_Button_label">Add</string>
    <string name="Add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="Edit_hint">Edit_hint</string>
    <string name="Save_hint">Save_hint</string>
    <string name="Savehint">Save</string>
    <string name="Edit_text"></string>
    <string name="Edit_txt">Edit Text Here</string>
    <string name="Edit">Edit</string>
    <string name="EdtItm"></string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="Add">Add</string>
    <string name="Due_Date">Due Date</string>
    <string name="Add_New_item">Add_New_item</string>
    <string name="Add_New_Itm">Add New Item</string>
    <string name="Due_Date1">Due Date(MM/DD/YY)</string>
    <string name="title_activity_test_main_activity">Test_main_activity</string>
    <string name="Large_text">To Do Item</string>
    <string name="DueDate_2">Due Date</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
        <string name="Priority">Priority</string>
</resources>
