<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.todolist.AddItemActivity" >

    <EditText
        android:id="@+id/AddTxt1"
        style="@style/LargeRedFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Add_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/AddDate"
        android:layout_width="wrap_content"
        style="@style/LargeRedFont"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddTxt1"
        android:layout_below="@+id/AddTxt1"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/Due_Date1"
        android:inputType="date" />

    <Button
        android:id="@+id/AddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddedItemActivity"
        android:layout_alignLeft="@+id/AddDate"
        android:layout_below="@+id/AddDate"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="24dp"
        android:hint="@string/Add"
        android:text="@string/Add" />

</RelativeLayout>
