<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.todolist.EditItemActivity" >

    <EditText
        android:id="@+id/edtItemtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/EdtItm" >

        <requestFocus />
    </EditText>
    
        <EditText
        android:id="@+id/AddDate_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtItemtext"
        android:layout_below="@+id/edtItemtext"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/Due_Date1"
        android:inputType="date" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/AddDate_edit"
            android:layout_below="@+id/AddDate_edit" />

        <Button
            android:id="@+id/saveTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_centerHorizontal="true"
            android:hint="@string/Savehint"
            android:onClick="onSaveItem" />

</RelativeLayout>
